# hi-bot

./: Cargo.toml  Dockerfile  Makefile
src/: main.rs
