[package]
name = "hi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = { version = "0.11.5", default_features = false, features = [
    "client",
    "model",
    "gateway",
    "rustls_backend",
] }
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
