[package]
name = "hi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "model",
    "gateway",
    "rustls_backend",
] }
tokio = { version = "1.39", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
